@@ -3,7 +3,7 @@
  * Global functions optoinally loaded with option 'globalfunctions'.
  * @see TsIntuition::__construct
  *
- * @copyright 2011-2012 See AUTHORS.txt
+ * @copyright 2011-2013 See AUTHORS.txt
  * @license CC-BY 3.0 <https://creativecommons.org/licenses/by/3.0/>
  * @package TsIntuition
  */
@@ -22,39 +22,50 @@ if ( !defined( 'TS_INTUITION' ) ) {
  * option to false when constructing the TsIntuition Class.
  */
 
-// Return a message
+/**
+ * Get a message from the global TsIntuition instance.
+ *
+ * @deprecated since 0.1.3: These conflict with native functions when PHP is compiled
+ *  with gettext library (see http://php.net/_).
+ * @param string $key
+ * @param Array [$options]
+ * @return string
+ */
 if ( !function_exists( '_' ) ) {
-function _( $key, $options = array() ) {
-	global $I18N;
-	return $I18N->msg( $key, $options );
-}
+	function _( $key, $options = array() ) {
+		global $I18N;
+		return $I18N->msg( $key, $options );
+	}
 }
 
 // Return a message from the 'general' domain
 if ( !function_exists( '_g' ) ) {
-function _g( $key, $options = array() ) {
-	if ( is_string( $options ) ) {
-		$options = array( 'domain' => $options );
+	function _g( $key, $options = array() ) {
+		global $I18N;
+		if ( is_string( $options ) ) {
+			$options = array( 'domain' => $options );
+		}
+		$options = array_merge( $options, array( 'domain' => 'general' ) );
+		return $I18N->msg( $key, $options );
 	}
-	$options = array_merge( $options, array( 'domain' => 'general' ) );
-	return _( $key, $options );
-}
 }
 
 // Return a message escaped as html
 if ( !function_exists( '_html' ) ) {
-function _html( $key, $options = array() ) {
-	if ( is_string( $options ) ) {
-		$options = array( 'domain' => $options );
+	function _html( $key, $options = array() ) {
+		global $I18N;
+		if ( is_string( $options ) ) {
+			$options = array( 'domain' => $options );
+		}
+		$options = array_merge( $options, array( 'escape' => 'html' ) );
+		return $I18N->msg( $key, $options );
 	}
-	$options = array_merge( $options, array( 'escape' => 'html' ) );
-	return _( $key, $options );
-}
 }
 
 // Echo a message
 if ( !function_exists( '_e' ) ) {
-function _e( $key, $options = array() ) {
-	echo _( $key, $options );
-}
+	function _e( $key, $options = array() ) {
+		global $I18N;
+		echo $I18N->msg( $key, $options );
+	}
 }
