@@ -1,6 +1,6 @@
 {
 	"name": "TsIntuition",
-	"version": "0.1.3",
+	"version": "0.1.3-pre",
 	"homepage": "https://github.com/Krinkle/TsIntuition",
 	"bugs": "https://github.com/Krinkle/TsIntuition/issues",
 	"scripts": {
